--- a/win-prog-course-exp/ChapterContent3.xaml
+++ b/win-prog-course-exp/ChapterContent3.xaml
@@ -53,6 +53,7 @@
                         <ColumnDefinition Width="2*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="2*" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0" Grid.Column="0">
@@ -66,6 +67,13 @@
                         <Button Background="Honeydew" Click="OpenClient">
                             <TextBlock FontSize="14">
                                 启动客户端进程
+                            </TextBlock>
+                        </Button>
+                    </Grid>
+                    <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                        <Button Background="Beige" Click="KillAllProcess">
+                            <TextBlock FontSize="14">
+                                终止所有进程
                             </TextBlock>
                         </Button>
                     </Grid>
