--- a/win-prog-course-exp/ChapterContent6.xaml
+++ b/win-prog-course-exp/ChapterContent6.xaml
@@ -13,13 +13,15 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="160" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="20" />
                     </Grid.RowDefinitions>
-                    <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+                    <Grid Grid.Row="0" Grid.Column="0">
                         <Button Background="Honeydew" Click="OpenExcel">
                             <TextBlock FontSize="14">
                                 选择Excel数据文件
@@ -33,10 +35,31 @@
                             </TextBlock>
                         </Button>
                     </Grid>
+                    <Grid Grid.Row="0" Grid.Column="1">
+                        <Button Background="Beige" Click="AddNew">
+                            <TextBlock FontSize="14">
+                                新建
+                            </TextBlock>
+                        </Button>
+                    </Grid>
+                    <Grid Grid.Row="0" Grid.Column="2">
+                        <Button Background="Cornsilk" Click="Update">
+                            <TextBlock FontSize="14">
+                                更新
+                            </TextBlock>
+                        </Button>
+                    </Grid>
+                    <Grid Grid.Row="0" Grid.Column="3">
+                        <Button Background="AntiqueWhite" Click="Delete">
+                            <TextBlock FontSize="14">
+                                删除
+                            </TextBlock>
+                        </Button>
+                    </Grid>
                     <Grid Grid.Row="1" Grid.Column="0">
                         <DataGrid Name="TableNamePresenter" ItemsSource="{Binding}" />
                     </Grid>
-                    <Grid Grid.Row="1" Grid.Column="1" Grid.RowSpan="2">
+                    <Grid Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3">
                         <DataGrid Name="DataPresenter" />
                     </Grid>
                 </Grid>
