--- a/win-prog-course-exp/ChapterContent6.xaml
+++ b/win-prog-course-exp/ChapterContent6.xaml
@@ -52,15 +52,15 @@
                     <Grid Grid.Row="0" Grid.Column="3">
                         <Button Background="AntiqueWhite" Click="Delete">
                             <TextBlock FontSize="14">
-                                删除
+                                清除
                             </TextBlock>
                         </Button>
                     </Grid>
                     <Grid Grid.Row="1" Grid.Column="0">
-                        <DataGrid Name="TableNamePresenter" ItemsSource="{Binding}" />
+                        <DataGrid Name="TableNamePresenter" ItemsSource="{Binding}" IsReadOnly="True" />
                     </Grid>
                     <Grid Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3">
-                        <DataGrid Name="DataPresenter" />
+                        <DataGrid Name="DataPresenter" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False" />
                     </Grid>
                 </Grid>
             </TabItem>
